fix: repair broken JSX in energy section

--- a/index.html
+++ b/index.html
@@ -1456,7 +1456,7 @@
                             <p className="text-emerald-200 italic mt-2">
                                 "L'IA brûle des kilowatts, pas de la magie."
                             </p>
-                        </div>
+                        </Card>
                     </div>
 
                     <div className="space-y-6">
